2016-09-15  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.2
	* inst/NEWS.Rd: Ditto

2016-09-14  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Roll minor version and date

	* DESCRIPTION (Imports): Relax min. version costraint on Rcpp

	* NAMESPACE: Make getFormats() and addFormat() public

	* src/anytime.cpp: Added documentation for new functions getFormats()
	and addFormats()
	* man/getFormats.Rd: Ditto

	* man/anytime-package.Rd: Mention getFormats() and addFormats()

	* inst/NEWS.Rd: Added

	* tests/validate.R: Loosen test removing stopifnot

	* R/anytime.R (anydate): Call as.POSIXlt() before calling as.Date()
	to ensure all sub-components of the tm structure are set (GH #4)
	* tests/gh_issue_5.R: test case

2016-09-13  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Rolled to (interim) version 0.0.1.1

	* DESCRIPTION (Title, Description): Edited to mention anydate()

	* src/anytime.cpp: Refactored so that formats are now simple
	string kept in vector (from which locales are built in the ctor of
	a simple container class); now new formats can be added (at the
	front); formats get be retrieved as well

	* README.md: Add badges and CRAN installation note

2016-09-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Version, Date): Release 0.0.1

	* DESCRIPTION (URL, BugReports): Added

	* src/anytime.cpp (anytime_cpp): Remove roxygen chunk
	* R/anytime.R (anytime): Add roxygen chunk
	* man/anytime.Rd: New file (replacing man/anytime_cpp.Rd)

	* NAMESPACE: Do not export anytime_cpp

	* R/anytime.R: Add copyright header
	* R/utils.R: Ditto
	* R/init.R: Ditto

2016-09-11  Dirk Eddelbuettel  <edd@debian.org>

	* R/anytime.R (anydate): New function reducing to Date

	* R/anytime.R (anytime): Support factors on input

	* src/anytime.cpp: Extended format list, corrected one special case,
	document 'anydate' and add roxygen alias, remove some unused code