@@ -1,6 +1,12 @@
+2016-09-17  Dirk Eddelbuettel  <edd@debian.org>
+
+	* src/anytime.cpp (testFormat): Added (non-exported) helper function
+	to test one format on one input (and timezone)
+
 2016-09-15  Dirk Eddelbuettel  <edd@debian.org>
 
 	* DESCRIPTION (Version, Date): Release 0.0.2
+
 	* inst/NEWS.Rd: Ditto
 
 2016-09-14  Dirk Eddelbuettel  <edd@debian.org>
